--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Document</title>
     <link rel="stylesheet" href="index.css">
 </head>
-<body>
+<body bgcolor = "#8118ad" >
     <h1> miau </h1>
 </body>
 </html>
