--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="index.css">
 </head>
 <body bgcolor = "#8118ad" >
+    <img src="img/20.23.12.jpeg" alt="some text" width=90 height=90>
     <h1> miau </h1>
 </body>
 </html>
