--- a/index.html
+++ b/index.html
@@ -8,7 +8,11 @@
     <link rel="stylesheet" href="index.css">
 </head>
 <body bgcolor = "#8118ad" >
-    <img src="img/20.23.12.jpeg" alt="some text" width=90 height=90>
     <h1> miau </h1>
+    <ul class="flex-container">
+        <img src="img/20.23.12.jpeg" alt="some text" class="imagem1" >
+        <img src="img/20.23.12(1).jpeg" alt="some text" class="imagem2" >
+        <img src="img/20.23.12(2).jpeg" alt="some text" class="imagem3" >
+    </ul>
 </body>
 </html>
