--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
     <link rel="stylesheet" href="index.css">
 </head>
 <body bgcolor = "#8118ad" >
-    <h1> miau </h1>
+    <h1> Miau </h1>
+    <h2> gatins </h2>
     <ul class="flex-container">
         <img src="img/20.23.12.jpeg" alt="some text" class="imagem1" >
         <img src="img/20.23.12(1).jpeg" alt="some text" class="imagem2" >
